--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       args:
         - EXTERNAL_REG=${EXTERNAL_REG}
         - INTERNAL_REG=${INTERNAL_REG}
-        - PYTHON_VERSION=${PYTHON_VERSION}
+        - PYTHON_IMG_VERSION=${PYTHON_IMG_VERSION}
         - CKAN_VERSION=${CKAN_VERSION}
         - MAINTAINER=${MAINTAINER}
     extra_hosts:
@@ -37,13 +37,13 @@ services:
 
   proxy:
     container_name: ckan_proxy
-    image: "${INTERNAL_REG}/ckan-proxy:${NGINX_VERSION}-main"
+    image: "${INTERNAL_REG}/ckan-proxy:${NGINX_IMG_VERSION}-main"
     build:
       context: ./nginx
       args:
         - EXTERNAL_REG=${EXTERNAL_REG}
         - INTERNAL_REG=${INTERNAL_REG}
-        - NGINX_VERSION=${NGINX_VERSION}
+        - NGINX_IMG_VERSION=${NGINX_IMG_VERSION}
         - MAINTAINER=${MAINTAINER}
     depends_on:
       - ckan
@@ -57,13 +57,13 @@ services:
 
   db:
     container_name: ckan_db
-    image: "${INTERNAL_REG}/ckan-db:${POSTGRES_VERSION}-${POSTGIS_VERSION}-main"
+    image: "${INTERNAL_REG}/ckan-db:${POSTGRES_IMG_VERSION}-${POSTGIS_IMG_VERSION}-main"
     build:
       context: ./postgresql
       args:
         - EXTERNAL_REG=${EXTERNAL_REG}
-        - POSTGRES_VERSION=${POSTGRES_VERSION}
-        - POSTGIS_VERSION=${POSTGIS_VERSION}
+        - POSTGRES_IMG_VERSION=${POSTGRES_IMG_VERSION}
+        - POSTGIS_IMG_VERSION=${POSTGIS_IMG_VERSION}
         - MAINTAINER=${MAINTAINER}
     environment:
       - POSTGRES_PASSWORD=ai4ncF6GpHokPaNmW25UftzMjM7hrC
@@ -82,12 +82,12 @@ services:
 
   solr:
     container_name: ckan_solr
-    image: "${INTERNAL_REG}/ckan-solr:${SOLR_VERSION}-main"
+    image: "${INTERNAL_REG}/ckan-solr:${SOLR_IMG_VERSION}-main"
     build:
       context: ./solr
       args:
         - EXTERNAL_REG=${EXTERNAL_REG}
-        - SOLR_VERSION=${SOLR_VERSION}
+        - SOLR_IMG_VERSION=${SOLR_IMG_VERSION}
         - MAINTAINER=${MAINTAINER}
     volumes:
       - solr_data:/var/solr/data
@@ -98,7 +98,7 @@ services:
 
   init-solr:
     container_name: ckan_init_solr
-    image: "${INTERNAL_REG}/ckan-init-solr:${SOLR_VERSION}-main"
+    image: "${INTERNAL_REG}/ckan-init-solr:${SOLR_IMG_VERSION}-main"
     build:
       context: ./init_solr
       args:
@@ -115,6 +115,6 @@ services:
 
   redis:
     container_name: ckan_redis
-    image: redis:${REDIS_VERSION}
+    image: redis:${REDIS_IMG_VERSION}
     networks:
       - ckan-internal
