--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 CKAN_VERSION=2.9
-PYTHON_IMG_VERSION=3.9
-POSTGRES_IMG_VERSION=14
-POSTGIS_IMG_VERSION=3.2
-SOLR_IMG_VERSION=8.11
-REDIS_IMG_VERSION=6.2
-NGINX_IMG_VERSION=1.23
+PYTHON_IMG_TAG=3.9
+POSTGRES_IMG_TAG=14
+POSTGIS_IMG_TAG=3.2
+SOLR_IMG_TAG=8.11
+REDIS_IMG_TAG=6.2
+NGINX_IMG_TAG=1.23
 MAINTAINER=sam.woodcock@protonmail.com
 INTERNAL_REG=registry.envidat.ch/envidat
 EXTERNAL_REG=docker.io
