--- a/postgresql/Dockerfile
+++ b/postgresql/Dockerfile
@@ -1,8 +1,8 @@
 ARG EXTERNAL_REG
-ARG POSTGRES_IMG_VERSION
-ARG POSTGIS_IMG_VERSION
+ARG POSTGRES_IMG_TAG
+ARG POSTGIS_IMG_TAG
 
-FROM ${EXTERNAL_REG}/postgis/postgis:${POSTGRES_IMG_VERSION}-${POSTGIS_IMG_VERSION}
+FROM ${EXTERNAL_REG}/postgis/postgis:${POSTGRES_IMG_TAG}-${POSTGIS_IMG_TAG}
 
 ARG MAINTAINER
 LABEL maintainer="${MAINTAINER}" 
