ci: add --force flag to kaniko to bypass 'container detection fails on cgroup v2 devices'

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -63,6 +63,7 @@ set-vars:
   script:
     - >
       /kaniko/executor
+      --force
       --context "${CONTEXT_DIR}"
       --dockerfile "${CONTEXT_DIR}/Dockerfile"
       --cache=true
