--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -59,6 +59,9 @@ probes:
 
 
 hostAliases:
+  - ip: 10.30.1.29
+    hostnames:
+      - "postgres.wsl.ch"
   - ip: 10.30.1.65
     hostnames:
       - "notes.wsl.ch"
