ci: only trigger helm deploy if ckan-retag complete

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -281,6 +281,7 @@ helm-deploy:
     - if: $CI_COMMIT_REF_NAME == "main"
       when: never
     - when: always
+  needs: [ckan-retag]
   variables:
     GIT_STRATEGY: none
   script:
