fix: allow traceparent header in nginx config for otel preflight

--- a/nginx/templates/ckan.conf.template
+++ b/nginx/templates/ckan.conf.template
@@ -13,6 +13,8 @@ server {
 
     add_header 'Content-Security-Policy' $upgrade_policy;
     add_header 'Access-Control-Allow-Credentials' 'true';
+    # For opentelemetry
+    add_header 'Access-Control-Allow-Headers' 'traceparent,tracestate';
 
     location / {
         proxy_pass http://${CKAN_HOST};
