build: helm chart bump 0.1.1 use CKAN_INI env var

--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -171,7 +171,7 @@ spec:
             {{- toYaml .Values.extraEnvFrom | nindent 12 }}
           volumeMounts:
           - name: ckan-config
-            mountPath: /home/ckan/ckan.ini
+            mountPath: $CKAN_INI
             subPath: ckan.ini
             readOnly: true
           - name: ckan-group-imgs
