--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -67,7 +67,7 @@ hostAliases:
       - "postgres.wsl.ch"
   - ip: 10.30.1.224
     hostnames:
-      - "notes.wsl.ch"
+      - "mail.wsl.ch"
 
 service:
   type: ClusterIP
