--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -62,9 +62,9 @@ probes:
 
 
 hostAliases:
-  - ip: 10.30.1.29
+  - ip: 10.30.1.156
     hostnames:
-      - "postgres.wsl.ch"
+      - "pgdboapp.wsl.ch"
   - ip: 10.30.1.224
     hostnames:
       - "mail.wsl.ch"
