--- a/docker-compose.stag.yml
+++ b/docker-compose.stag.yml
@@ -23,7 +23,7 @@ services:
         - CKAN_VERSION=${CKAN_VERSION}
         - MAINTAINER=${MAINTAINER}
     extra_hosts:
-      postgres.wsl.ch: 10.30.1.29
+      pgdboapp.wsl.ch: 10.30.1.156
       mail.wsl.ch: 10.30.1.224
     depends_on:
       - db
