build: nginx separate build for prod/stag, manual https for stag

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -58,6 +58,7 @@ services:
         - INTERNAL_REG=${INTERNAL_REG}
         - NGINX_IMG_TAG=${NGINX_IMG_TAG}
         - MAINTAINER=${MAINTAINER}
+        - CONFIG_NAME=prod
     depends_on:
       - ckan
     environment:
