fix: comment identifiers in who.ini to disable standard login

--- a/who.ini
+++ b/who.ini
@@ -17,10 +17,10 @@ charset = utf-8
 request_classifier = repoze.who.classifiers:default_request_classifier
 challenge_decider = repoze.who.classifiers:default_challenge_decider
 
-[identifiers]
-plugins =
-    friendlyform;browser
-    auth_tkt
+; [identifiers]
+; plugins =
+;     friendlyform;browser
+;     auth_tkt
 
 [authenticators]
 plugins =
