--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,14 +1,15 @@
-user  nginx;
-worker_processes  auto;
+user                  nginx;
+worker_processes      auto;
+worker_rlimit_nofile  4096;
 
-error_log  /var/log/nginx/error.log notice;
-pid        /var/run/nginx.pid;
+error_log             /var/log/nginx/error.log notice;
+pid                   /var/run/nginx.pid;
 
 
 events {
-    worker_connections  1024;
+    worker_connections 1024;
+    use epoll;
 }
-
 
 http {
     include       /etc/nginx/mime.types;
