ci: update from k8s registry to gitlab container reg

--- a/.env
+++ b/.env
@@ -6,5 +6,5 @@ SOLR_IMG_TAG=8.11
 REDIS_IMG_TAG=6.2
 NGINX_IMG_TAG=1.23
 MAINTAINER=sam.woodcock@protonmail.com
-INTERNAL_REG=registry.envidat.ch/envidat
+INTERNAL_REG=registry-gitlab.wsl.ch/envidat
 EXTERNAL_REG=docker.io
