--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: registry.envidat.ch/envidat/ckan
+  repository: registry-gitlab.wsl.ch/envidat/ckan
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
