build: update NGINX_CONFIG_NAME var, include in ci build

--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ POSTGIS_IMG_TAG=3.3
 SOLR_IMG_TAG=8.11
 REDIS_IMG_TAG=6.2
 NGINX_IMG_TAG=1.23
+NGINX_CONFIG_NAME=prod
 MAINTAINER=sam.woodcock@protonmail.com
 INTERNAL_REG=registry-gitlab.wsl.ch/envidat
 EXTERNAL_REG=docker.io
