--- a/docker-compose.stag.yml
+++ b/docker-compose.stag.yml
@@ -50,7 +50,7 @@ services:
         - INTERNAL_REG=${INTERNAL_REG}
         - NGINX_IMG_TAG=${NGINX_IMG_TAG}
         - MAINTAINER=${MAINTAINER}
-        - CONFIG_NAME=stag
+        - NGINX_CONFIG_NAME=stag
     depends_on:
       - ckan
     environment:
